--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "react-dev-utils": "^0.5.2",
     "style-loader": "0.13.1",
     "ts-loader": "^1.3.1",
-    "tslint": "^4.0.2",
+    "tslint": "5.2.0",
     "tslint-loader": "^3.3.0",
-    "tslint-react": "^2.0.0",
+    "tslint-react": "3.0.0",
     "typescript": "^2.2.2",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
@@ -53,7 +53,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "tslint": "tslint 'src/**/*.ts?(x)'"
   },
   "jest": {
     "collectCoverageFrom": [
