--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@types/node": "^7.0.18",
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
+    "@types/react-router-config": "^1.0.1",
     "@types/react-router-dom": "4.0.4",
     "antd": "^2.10.0",
     "mobx": "3.1.9",
     "mobx-react": "4.1.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "4.1.1"
+    "react-router-config": "^1.0.0-beta.3",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "app-root-path": "^2.0.1",
